Fixes MIME-Type to get a proper formatted reset-mail.

--- a/install/assets/ssp/config.inc.php.template
+++ b/install/assets/ssp/config.inc.php.template
@@ -182,7 +182,7 @@ $mail_smtp_timeout = 30;
 $mail_smtp_keepalive = false;
 $mail_smtp_secure = '<SMTP_SECURE_TYPE>';
 $mail_smtp_autotls = <SMTP_AUTOTLS>;
-$mail_contenttype = 'text/html';
+$mail_contenttype = 'text/plain';
 $mail_wordwrap = 0; 
 $mail_charset = 'utf-8';
 $mail_priority = 3;
