--- a/install/etc/nginx/sites.available/ssp.conf
+++ b/install/etc/nginx/sites.available/ssp.conf
@@ -8,7 +8,7 @@
     }
 
     location ~ \.php(/|$) {
-      include /etc/nginx/nginx.conf.d/php-fpm.conf;
+      include /etc/nginx/snippets/php-fpm.conf;
       fastcgi_split_path_info ^(.+?\.php)(/.+)$;
       fastcgi_param PATH_INFO $fastcgi_path_info;
       fastcgi_index index.php;
@@ -17,6 +17,6 @@
     }
 
     ### Don't edit past here
-    include /etc/nginx/nginx.conf.d/site_optimization.conf;
-    include /etc/nginx/nginx.conf.d/exploit_protection.conf;
+    include /etc/nginx/snippets/site_optimization.conf;
+    include /etc/nginx/snippets/exploit_protection.conf;
 }
