Add PASSWORD_COMPLEXITY to README and docker-compose example
https://github.com/tiredofit/docker-self-service-password/issues/57

--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -86,6 +86,8 @@ services:
       - PASSWORD_MIN_DIGIT=0
     # Minimal special characters
       - PASSWORD_MIN_SPECIAL=0
+    # Minimum number of different classes of characters
+      - PASSWORD_COMPLEXITY=0
     # Dont reuse the same password as currently
       - PASSWORD_NO_REUSE=true
     # Definition of special characters
