--- a/install/etc/nginx/sites.available/ssp.conf
+++ b/install/etc/nginx/sites.available/ssp.conf
@@ -1,6 +1,6 @@
   server {
-     listen <LISTEN_PORT>;
-     root <WEBROOT>;
+     listen {{NGINX_LISTEN_PORT}};
+     root {{NGINX_WEBROOT}};
      index  index.php;
 
     location / {
